Using fixed positioning on label to prevent page jumping

--- a/assets/scss/tab.scss
+++ b/assets/scss/tab.scss
@@ -10,7 +10,7 @@
 }
 
 .tabInput {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 0;
